fixed overflow of parallax

--- a/pages/HomePage/home.css
+++ b/pages/HomePage/home.css
@@ -2,7 +2,6 @@ section#main-hero {
   margin-top: 90px;
   padding-top: 60px;
   padding-bottom: 60px;
-  overflow: hidden;
 }
 
 section#main-hero #welcome-callout {
@@ -38,7 +37,6 @@ section#main-hero .typed-cursor {
 
 #scene {
   height: 320px;
-  overflow: hidden;
 }
 
 #layer-1,
